--- a/Sitemap/sample.ini
+++ b/Sitemap/sample.ini
@@ -14,9 +14,10 @@ C:\MyPrivate
 [ROOT_PAGE] Write 1 to make 1st root page from ALIAS folders, 0 - don't, directory is the root.
 1
 
-[ALIAS] Name instead of local paths, also the roots. Visible, not linkable.
+[ALIAS] Name instead of local paths, also the roots. Visible, not linkable. {site} for just weblink.
 C:\Github = My Git Repositories
 D: = My D disk folders
+{site}http://mysite.ww = My Blog
 
 [WWW] Domain site where the folder is online. Local paths to hyperlinks.
 C:\Github\TheMyRepo = https://www.www.ww/TheMyRepo
